infra/contour/templates/gateway-internal.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: internal-contour
spec:
  controllerName: projectcontour.io/gateway-controller
  parametersRef:
    kind: ContourDeployment
    group: projectcontour.io
    name: internal-contour-params
    namespace: projectcontour
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: internal-contour
  namespace: projectcontour
spec:
  gatewayClassName: internal-contour
  listeners:
    - name: grpc
      protocol: TCP
      port: 9000
      allowedRoutes:
        namespaces:
          from: All
